creusot/tests/should_fail/prusti/deref/expired2.stderr
error[creusot]: `(&'curr u32, ())` cannot be moved from `'old` to `'a` since it doesn't live long enough
                `'curr` doesn't outlive `'a`
  --> expired2.rs:14:20
   |
14 | #[after_expiry('a, x.mk_ref() == (y, ()).mk_ref())]
   |                    ^

error: aborting due to previous error

